[gd_scene load_steps=11 format=3 uid="uid://b32mcmfbiwr4a"]

[ext_resource type="Script" path="res://levels/scripts/TheReactor.gd" id="1_e0i7v"]
[ext_resource type="Texture2D" uid="uid://dh5mu3ewr7sup" path="res://images/reactor1.png" id="2_3g118"]
[ext_resource type="Texture2D" uid="uid://dff6vi2jsl3vw" path="res://images/reactor2.png" id="3_aw512"]
[ext_resource type="PackedScene" uid="uid://camw6qmw5r6wu" path="res://levels/rad_adder.tscn" id="4_uebnx"]
[ext_resource type="Script" path="res://levels/scripts/rc_b.gd" id="5_8hdng"]
[ext_resource type="AudioStream" uid="uid://cq3iod7wrn368" path="res://sounds/zvuk-klasicheskiy-zvuk-vzryva.mp3" id="6_w8eo7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nsdox"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_aw512")
}],
"loop": true,
"name": &"break",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3g118")
}],
"loop": true,
"name": &"notbreak",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rcslk"]
size = Vector2(44, 28)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rgjna"]
radius = 8.5
height = 44.0

[sub_resource type="Gradient" id="Gradient_v3dry"]
offsets = PackedFloat32Array(0, 0.526786, 1)
colors = PackedColorArray(0.916793, 0.587127, 3.85046e-07, 1, 0.772549, 0, 0, 1, 0.0745098, 0.0745098, 0.0745098, 0)

[node name="TheReactor" type="Node2D"]
scale = Vector2(6, 6)
script = ExtResource("1_e0i7v")

[node name="rad_adder" parent="." instance=ExtResource("4_uebnx")]
scale_r = 0.2

[node name="rad_adder2" parent="." instance=ExtResource("4_uebnx")]
scale = Vector2(0.5, 0.5)

[node name="rad_adder3" parent="." instance=ExtResource("4_uebnx")]
scale = Vector2(0.2, 0.2)
scale_r = 5.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nsdox")
animation = &"notbreak"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource("5_8hdng")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_rcslk")
debug_color = Color(0.847059, 0.376471, 0, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 16)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_rgjna")
debug_color = Color(0.819608, 0.403922, 0.0117647, 0.419608)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.166667, -6.66667)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_rgjna")
debug_color = Color(0.819608, 0.403922, 0.0117647, 0.419608)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 1000
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 257.3
scale_amount_min = 14.69
scale_amount_max = 198.66
color_ramp = SubResource("Gradient_v3dry")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-1, 0)
stream = ExtResource("6_w8eo7")

[connection signal="killS" from="StaticBody2D" to="." method="_on_static_body_2d_kill_s"]
